--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -5,4 +5,5 @@
     <string name="couldnt_find">見つかりませんでした</string>
     <string name="my_location">現在地</string>
     <string name="history">履歴</string>
+    <string name="cant_get_location">現在地を取得できません。位置情報設定でGPSやワイヤレスネットワークをオンにしてください。</string>
 </resources>
